[project]
name = "medicalimage-segmentation-202601"
version = "0.1.0"
description = ""
authors = [
    {name = "HowardKuo2025",email = "howard.futurenest@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
